# wget

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml  rustfmt.toml
docs/: audit.todo
scripts/: audit.sh
src/: args.rs  download.rs  lib.rs  main.rs  parse.rs
src/args/: mirror.rs  mod.rs  rate.rs  validate.rs
src/flags/: background.rs  file_path.rs  links.rs  mod.rs  name.rs  path.rs  rate_limit.rs
src/flags/mirror/: convert_links.rs  exclude.rs  mod.rs  reject.rs
src/utils/: constants.rs  error.rs  errors.rs  functions.rs  macros.rs  mod.rs
tests/: format.rs
todo/: tasks.todo
