[package]
name = "wget"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
reqwest = { version = "0.12.14", features = ["stream"] }
url = "2.5.4"
indicatif = "0.17.11"
regex = "1.11.1"
chrono = "0.4.40"